--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 html {
-  background-color: #0c0c0c;
+  background-color: #000000;
   height: 100%;
   user-select: none;
   -ms-user-select: none;
